deployment/manual/demo-portal/demo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fc-demo-portal
  labels:
    app: fc-demo-portal
  namespace: federated-catalogue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fc-demo-portal
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: fc-demo-portal
    spec:
      containers:
        - name: fc-demo-portal-image
          image: node-654e3bca7fbeeed18f81d7c7.ps-xaas.io/catalogue/fc-demo-portal:latest
          imagePullPolicy: Always
          ports:
            - name: "http"
              containerPort: 8088
          readinessProbe:
            httpGet:
              path: "/actuator/health"
              port: 8088
            initialDelaySeconds: 60
            periodSeconds: 30
          resources: { }
      restartPolicy: Always
