deployment/manual/demo-portal/demo-balancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fc-demo-portal-balancer-service
  namespace: federated-catalogue
  labels:
    app: fc-demo-portal
spec:
  ports:
    - name: http
      port: 8088
      targetPort: 8088
  selector:
    app: fc-demo-portal
  type: LoadBalancer
