deployment/manual/demo-portal/demo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fc-demo-portal
  namespace: federated-catalogue
  labels:
    app: fc-demo-portal
spec:
  ports:
    - name: "8088"
      port: 8088
      targetPort: 8088
  selector:
    app: fc-demo-portal
  type: ClusterIP
